force-app/main/default/objects/Epic__c/fields/Reasons__c.field-meta.xml
<CustomField>
    <fullName>Reasons__c</fullName>
    <formula>&quot;So that &quot;+ So_that__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reasons</label>
    <type>Text</type>
</CustomField>