force-app/main/default/objects/Epic__c/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <formula>&quot;I need &quot;+ I_need__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirements</label>
    <type>Text</type>
</CustomField>