force-app/main/default/objects/Epic__c/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <formula>&quot;As a&quot;+CASE(LEFT(As_a__c,1),&quot;a&quot;,&quot;n&quot;,&quot;e&quot;,&quot;n&quot;,&quot;i&quot;,&quot;n&quot;,&quot;o&quot;,&quot;n&quot;,&quot;u&quot;,&quot;n&quot;,&quot;A&quot;,&quot;n&quot;,&quot;E&quot;,&quot;n&quot;,&quot;I&quot;,&quot;n&quot;,&quot;O&quot;,&quot;n&quot;,&quot;U&quot;,&quot;n&quot;,&quot;&quot;)+&quot; &quot;+As_a__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roles</label>
    <type>Text</type>
</CustomField>