force-app/main/default/objects/Epic__c/recordTypes/Epic.recordType-meta.xml
<RecordType>
    <fullName>Epic</fullName>
    <active>true</active>
    <label>Epic</label>
</RecordType>