force-app/main/default/objects/Epic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Roles__c</columns>
    <columns>Requirements__c</columns>
    <columns>Reasons__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Epic__c.Epic</value>
    </filters>
    <label>All</label>
</ListView>